# CryptFlows-Flows

./: README.md  pyproject.toml
docs/: doc.md
flows/: pyproject.toml
src/: main.py
src/cryptflows_flows/: app.py
src/cryptflows_flows/configs/: dev.py
src/cryptflows_flows/db/: database.py
src/cryptflows_flows/db/models/base/: project.py  project_role.py  project_status.py  proxy.py  tag.py  task.py  task_status.py  task_type.py  team.py  team_invitation.py  team_member.py  team_roles.py  user.py  user_role.py  workflow.py  workflow_status.py
src/cryptflows_flows/db/models/knowledge_base/: agent.py  application.py  category.py  configuration.py  connection.py  dns_record.py  document.py  document_tag.py  entity.py  event.py  event_tag.py  file.py  hardware.py  host.py  ip_address.py  location.py  media.py  network.py  note.py  organization.py  person.py  reference.py  service.py  software.py  subnet.py  topic.py
