[project]
name = "CryptFlows-Flows"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "rich>=13.7.1",
    "docker>=7.1.0",
    "outlines>=0.0.46",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
